# rocketchatbot

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
pyrocketbot/: __init__.py  client.py
